styles.css
* {
    font-family: 'Poppins', sans-serif;
}

html {
    height: 100%;
    background-color: #e7f1f1;
}

body {
    height: 100%;
    display: flex;
}

main {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 75%;
    border-right: 5px solid #000000;
    min-width: 950px;
}

h1 {
    margin: 0;
}

h2 {
    font-size: 2.3rem;
    margin: 0 0 30px 0;
}

p {
    font-size: 1.5rem;
}

header {
    font-weight: bolder;
    font-size: 3rem;
    text-align: center;
}

#paletteName {
    display: inline-flex;
    justify-content: center;
    font-size: x-large;
    font-weight: 500;
    font-style: italic;
}

.main-display,
.button-area {
    display: flex;
    justify-content: center;
}

.save-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    text-align: center;
    width: 25%;
    margin-top: 35px;
    min-width: 350px;
}

button {
    background-color: #000000;
    color: #FFFFFF;
    padding: 10px 0 10px;
    font-size: x-large;
    font-weight: 200;
    border: none;
    white-space: nowrap;
}

.button-box-l {
    height: auto;
    min-width: 50px;
    background-color: #000000;
    border-bottom-left-radius: 100%;
    margin-left: 100px;
}

.button-box-r {
    height: auto;
    min-width: 50px;
    background-color: #000000;
    border-top-right-radius: 100%;
    margin-right: 100px;
}

.color-container {
    padding: 10px;
}

.color-box {
    position: relative;
    height: 150px;
    width: 150px;
    border: 5px solid;
}

.mini-container {
    display: flex;
    align-items: center;
    margin: 13px 0 13px 10px;
}

.mini-box {
    height: 40px;
    width: 40px;
    border: 4px solid;
    margin: 0 4px;
}

.delete-button {
    height: 38px;
    width: 38px;
    border: none;
    padding: 0 20px;
}

.lock-box {
    position: absolute;
    bottom: 0;
    right: 0;
    height: 30px;
    width: 30px;
    padding: 8px;
    text-align: center;
}

.hover:hover {
    transform: scale(1.3);
}

.hex-code {
    text-align: center;
    font-weight: 400;
    padding-top: 5px;
    font-size: 1.2em;
}

.modal-window {
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    height: 350px;
    width: 350px;
    background-color: #e7f1f1;
    border: 4px solid;
    border-radius: 10%;
    font-size: x-large;
}

#modalText {
    padding: 10px;
    text-align: center;
}

#deletePaletteButton {
    border-radius: 15px;
    padding: 10px;
}

.modal-exit-button {
    height: 38px;
    width: 38px;
    border: none;
    padding-left: 60%;
}

.hidden {
    display: none;
}

.block {
    pointer-events: none;
    opacity: 0.3;
}

